--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport"> 
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    <link type="text/css" rel="stylesheet" href="/assets/css/normalize.css" media="screen" />
-    <link type="text/css" rel="stylesheet" href="/assets/css/style.css" media="screen" /> 
+    <link type="text/css" rel="stylesheet" href="assets/css/normalize.css" media="screen" />
+    <link type="text/css" rel="stylesheet" href="assets/css/style.css" media="screen" /> 
 </head>
 
 <body>
