--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 </div>
 <div id="map"></div>
 <div class="img">
-    <button style="display:none">Continue</button>
     <img src="assets/images/section-right.png" />
+    <button style="display:none">Continue</button>
 </div>
         </section>
     </article>
@@ -168,7 +168,7 @@
     });
 
 </script>
-<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js"></script>
+<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBFfBj9heMVV7niLbGq1iEE71P5lq_uNDE "></script>
 <script type="text/javascript">
     // When the window has finished loading create our google map below
     google.maps.event.addDomListener(window, 'load', init);
