--- a/index.html
+++ b/index.html
@@ -32,7 +32,18 @@
         <button>Commander le connecteur</button>
         <p class="center">Revenir à la communauté</p>
     </div>
-    <div class="state-2"></div>
+    <div class="state-2">
+        <img src="assets/images/left-state2-15.svg" />
+        <img src="assets/images/card.png" class="card" />
+        <form>
+            <input type="text" placeholder="Numéro de carte" />
+            <input type="text" placeholder="Nom Prénom" />
+            <input type="text" placeholder="Date d'expiration" class="date" />
+            <input type="number" placeholder="CVC" class="cvc" />
+        </form>
+        <button>Payer pour commander</button>
+        <p class="center">Annuler</p>
+    </div>
     <div class="state-3"></div>
 </div>
 <div>
@@ -180,6 +191,14 @@
             e.preventDefault();
             $(this).attr("disabled", "disabled");
             $("article section.left").removeClass("inactive");
+        });
+
+
+        $("article section.left .container .state-1 button").click(function(e) {
+            e.preventDefault();
+            $(this).attr("disabled", "disabled");
+            $("article section.left .container .state-1").hide();
+            $("article section.left .container .state-2").show();
         });
     });
 
