--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
         $("article section.right button.fmc").click(function(e) {
             e.preventDefault();
             $(this).attr("disabled", "disabled");
-            var src = "https://www.google.com/maps/d/kml?mid=1qRz8HYh3eU1zCzvbIlT6Pg5d1SU&cid=mp&cv=IA-YQgxTvq0.en.";
+            var src = "https://www.google.com/maps/d/kml?mid=1Z_gqkt7kz1IIZGWDa5QD2k7uKWw&nl=1&cid=mp&cv=IA-YQgxTvq0.en.";
             var kmlLayer = new google.maps.KmlLayer(src, {
                 suppressInfoWindows: true,
                 preserveViewport: false,
